# SoftPandas

./: CITATION.cff  README.md  demo.py  pyproject.toml  requirements.txt  test.py
core/: data_types.py  soft_dataframe.py  utils.py
embedders/: clip_embedder.py  embedder.py  sentence_transformer_embedder.py
sample_data/: Womens Fashion.csv  example_data.csv  men-swimwear.csv
src/softpandas/: __init__.py
src/softpandas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/softpandas/core/: soft_dataframe.py  utils.py
src/softpandas/embedders/: clip_embedder.py  embedder.py  sentence_transformer_embedder.py
